<resources>
  <string name="app_name">Meet-up</string>
  <!-- Strings related to login -->
  <string name="prompt_name">Name</string>
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password</string>
  <string name="prompt_confirm_password">Confirm Password</string>
  <string name="action_sign_in">Sign in</string>
  <string name="action_sign_up">Sign Up</string>
  <string name="welcome">"Welcome !"</string>
  <string name="invalid_username">Not a valid username</string>
  <string name="invalid_password">Password must be >5 characters</string>
  <string name="login_failed">"Login failed"</string>
  <string name="signup_prompt">"Don't have an account? "<a href="">"Sign up"</a></string>
  <string name="title_activity_maps">Map</string>
  <string name="server_client_id">157633581756-h8elkk7bfblefrjb88a6tqh9nu4rocka.apps.googleusercontent.com</string>
  <!-- Strings related to notification -->
  <string name="channel_name">Meet Up</string>
</resources>